# techblog-collector

./: .gitignore  README.md  config.py  crawler.py  gpt_recommender.py  gpt_summarizer.py  main.py  notion_reader.py  notion_writer.py  pyproject.toml  rss_reader.py
.github/workflows/: schedule.yml
test/: test_crawler.py  test_gpt_summarizer.py  test_load_json.py  test_notion_writer.py  test_rss_vailidation.py
