[project]
name = "rss-llm-digeset"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "feedparser (>=6.0.11,<7.0.0)",
    "openai (>=1.98.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "notion-client (>=2.4.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
